cmake_minimum_required(VERSION 3.13)
project(..)
set(CMAKE_CXX_STANDARD 14)
add_executable(
        . AgainTwentyFive.cpp
        CombinationLock.cpp
        CopyCopyCopyCopyCopy.cpp
        EpicGame.cpp
        LCMProblem.cpp
        MinutesBeforeTheNewYear.cpp
        NightAtTheMuseum.cpp
        OmkarAndCompletion.cpp
        SerejaAndDima.cpp
        SoftDrinking.cpp)